cmake_minimum_required(VERSION 3.24)
project(untitled2)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled2 c++계절학기/2022.12.26/append.c c++계절학기/2022.12.26/nan.c c++계절학기/2022.12.27/sinx.c c++계절학기/2022.12.27/fptest.c c++계절학기/2022.12.27/funpar.c c++계절학기/2022.12.27/typedef.c c++계절학기/2022.12.27/complex.c c++계절학기/2022.12.28/example.cpp c++계절학기/2022.12.28/rect.cpp c++계절학기/2022.12.28/bank.cpp c++계절학기/과제/과제3.cpp c++계절학기/과제/과제2.c c++계절학기/과제/과제1.c c++계절학기/2022.12.29/test.cpp)
