cmake_minimum_required(VERSION 3.24)
project(untitled2)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled2 c++계절학기/2022.12.26/append.c c++계절학기/2022.12.26/nan.c c++계절학기/2022.12.27/sinx.c c++계절학기/2022.12.27/fptest.c c++계절학기/2022.12.27/funpar.c c++계절학기/2022.12.27/typedef.c c++계절학기/2022.12.27/complex.c c++계절학기/2022.12.28/example.cpp c++계절학기/2022.12.28/rect.cpp c++계절학기/2022.12.28/bank.cpp c++계절학기/과제/과제3.cpp c++계절학기/과제/과제2.c c++계절학기/과제/과제1.c c++계절학기/2022.12.29/init.cpp c++계절학기/2022.12.29/Card/cardm.cpp c++계절학기/2022.12.29/Card/card1.cpp c++계절학기/2022.12.29/Card/card1.h c++계절학기/2022.12.29/Dog/SolutionA/Dog.cpp c++계절학기/2022.12.29/Dog/SolutionB/Dog.cpp c++계절학기/2022.12.29/Dog/SolutionB/Dog.h c++계절학기/2022.12.29/Dog/SolutionB/DogSchool.h c++계절학기/2022.12.29/Dog/SolutionB/DogSchool.cpp c++계절학기/2022.12.29/Dog/SolutionB/main.cpp c++계절학기/2022.12.29/Boy/Boy.cpp c++계절학기/2022.12.29/Boy/Boy.h c++계절학기/2022.12.29/Boy/Girl.cpp c++계절학기/2022.12.29/Boy/Girl.h c++계절학기/2022.12.29/Boy/main.cpp c++계절학기/2022.12.30/Bank.cpp)
